# simulation-contracts

./: .gitignore  Anchor.toml  Cargo.toml  README.md  generate_idl.js  package-lock.json  package.json
docs/: SUMMARY.md  glossary.md  roadmap.md
docs/developers/: architecture.md  building.md  deployment.md  getting-started.md  integration.md  tech-stack.md  testing.md
docs/developers/contracts/: shared-patterns.md
docs/developers/contracts/alons-box/: audit.md  commit-reveal.md  error-codes.md  instructions.md  pda-accounts.md  security-model.md
docs/games/alons-box/: actions-and-economy.md  overview.md  realms.md  rounds.md
docs/introduction/: getting-started.md  overview.md
docs/platform/: overview.md
docs/platform/development/: architecture.md  shared-contracts.md  tech-stack.md
docs/platform/game-design/: ai-systems.md  design-pillars.md  realms.md  trust-and-fairness.md
docs/platform/tokenomics/: fee-structure.md  token-flow.md
docs/protocol/: ai-systems.md  error-codes.md  fee-structure.md  overview.md  payout-distribution.md  trust-model.md
docs/resources/: contract-addresses.md  links.md  roadmap.md
docs/security/: adversarial-testing.md
docs/token/: overview.md
docs/welcome/: what-is-simulation.md
programs/alons-box/: Cargo.toml
programs/alons-box/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/alons-box/src/instructions/: close_deposit.rs  close_round.rs  create_round.rs  deposit.rs  emergency_expire.rs  expire.rs  initialize.rs  mod.rs  settle.rs
tests/: alons-box.ts  rollover-accounting.ts
(+10 files in other folders)
