[package]
name = "alons-box"
version = "0.1.0"
description = "Anchor smart contract for Alon's Box game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alons_box"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
blake3 = ">=1.3.1, <1.8"
